libraries, componets, styles, route, modules, refactor

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,33 @@
   <meta charset="utf-8">
   <title>Projecte</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- prime ng dependencies -->
+  <!-- 
+    <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+    <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
+    <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
+    they can come from angular.json "styles" too eg:
+      styles: [
+      "node_modules/primeicons/primeicons.css",
+      "node_modules/primeng/resources/themes/nova-light/theme.css",
+      "node_modules/primeng/resources/primeng.min.css"]
+  -->
+   <!-- End prime ng dependencies -->
+   <!-- for mdb boostrap
+    "styles": [
+    "node_modules/font-awesome/scss/font-awesome.scss",
+    "node_modules/angular-bootstrap-md/scss/bootstrap/bootstrap.scss",
+    "node_modules/angular-bootstrap-md/scss/mdb-free.scss",
+    "src/styles.scss"
+    ],
+    "scripts": [
+      "node_modules/chart.js/dist/Chart.js",
+      "node_modules/hammerjs/hammer.min.js"
+    ],
+  -->
 </head>
 <body>
   <app-root></app-root>
