--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+    w[l] = w[l] || []; w[l].push({
+      'gtm.start':
+        new Date().getTime(), event: 'gtm.js'
+    }); var f = d.getElementsByTagName(s)[0],
+      j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MGB2KZ3');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>Projecte</title>
   <base href="/">
@@ -18,8 +29,8 @@
       "node_modules/primeng/resources/themes/nova-light/theme.css",
       "node_modules/primeng/resources/primeng.min.css"]
   -->
-   <!-- End prime ng dependencies -->
-   <!-- for mdb boostrap
+  <!-- End prime ng dependencies -->
+  <!-- for mdb boostrap
     "styles": [
     "node_modules/font-awesome/scss/font-awesome.scss",
     "node_modules/angular-bootstrap-md/scss/bootstrap/bootstrap.scss",
@@ -31,8 +42,44 @@
       "node_modules/hammerjs/hammer.min.js"
     ],
   -->
+  <!-- <script type="application/javascript" src="https://widget.tiledesk.com/v2/tiledesk.js" id='tiledesk-jssdk'>
+    window.tiledeskSettings = 
+      {
+       projectid: "5d1911aae306ba0017004b53",
+        logoChat: "nologo",
+        wellcomeTitle: "Hi, welcome to Uplaymate 👋 ",
+        themeColor: "#000000",
+        themeForegroundColor: "#ffe1ac",
+      };
+      // (function(d, s, id) {
+      //   var js, fjs = d.getElementsByTagName(s)[0];
+      //   if (d.getElementById(id)) return;
+      //   js = d.createElement(s); js.id = id; //js.async=!0;
+      //   js.src = "https://widget.tiledesk.com/v2/tiledesk.js";
+      //   fjs.parentNode.insertBefore(js, fjs);
+      // }(document, 'script', 'tiledesk-jssdk'));
+  </script> -->
 </head>
+
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MGB2KZ3" height="0" width="0"
+      style="display:none;visibility:hidden" class="mat-app-background"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/5d1968347a48df6da24249bd/default';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
+
 </html>
