--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+
   <!-- prime ng dependencies -->
   <!-- 
     <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
@@ -30,6 +33,7 @@
       "node_modules/primeng/resources/primeng.min.css"]
   -->
   <!-- End prime ng dependencies -->
+
   <!-- for mdb boostrap
     "styles": [
     "node_modules/font-awesome/scss/font-awesome.scss",
@@ -59,9 +63,10 @@
       //   fjs.parentNode.insertBefore(js, fjs);
       // }(document, 'script', 'tiledesk-jssdk'));
   </script> -->
+  
 </head>
 
-<body>
+<body class="pe-dark-theme">
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MGB2KZ3" height="0" width="0"
       style="display:none;visibility:hidden" class="mat-app-background"></iframe></noscript>
