--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 <head>
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
-    w[l] = w[l] || []; w[l].push({
-      'gtm.start':
-        new Date().getTime(), event: 'gtm.js'
-    }); var f = d.getElementsByTagName(s)[0],
-      j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-MGB2KZ3');</script>
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
@@ -20,6 +20,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- prime ng dependencies -->
   <!-- 
@@ -63,7 +64,7 @@
       //   fjs.parentNode.insertBefore(js, fjs);
       // }(document, 'script', 'tiledesk-jssdk'));
   </script> -->
-  
+
 </head>
 
 <body class="pe-dark-theme">
@@ -85,6 +86,21 @@
     })();
   </script>
   <!--End of Tawk.to Script-->
+  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
+
+<script src="http://www.builtbyevolve.com/files/nerveSlider/jquery.nerveSlider.min.js"></script>
+<link rel="stylesheet" href="http://www.builtbyevolve.com/files/nerveSlider/nerveSlider.min.css">
+<script>
+      $(document).ready(function(){
+      $(".iAmTest").startslider({
+        slideTransitionSpeed: 1800,
+        slideTransitionEasing: "easeInOutExpo",
+        slidesDraggable: true,
+        sliderResizable: true
+        });
+    });
+</script> -->
 </body>
 
 </html>
