--- a/src/index.html
+++ b/src/index.html
@@ -72,9 +72,11 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MGB2KZ3" height="0" width="0"
       style="display:none;visibility:hidden" class="mat-app-background"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+
   <app-root></app-root>
+  
   <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
     (function () {
       var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
@@ -84,23 +86,8 @@
       s1.setAttribute('crossorigin', '*');
       s0.parentNode.insertBefore(s1, s0);
     })();
-  </script>
-  <!--End of Tawk.to Script-->
-  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
+  </script> -->
 
-<script src="http://www.builtbyevolve.com/files/nerveSlider/jquery.nerveSlider.min.js"></script>
-<link rel="stylesheet" href="http://www.builtbyevolve.com/files/nerveSlider/nerveSlider.min.css">
-<script>
-      $(document).ready(function(){
-      $(".iAmTest").startslider({
-        slideTransitionSpeed: 1800,
-        slideTransitionEasing: "easeInOutExpo",
-        slidesDraggable: true,
-        sliderResizable: true
-        });
-    });
-</script> -->
 </body>
 
 </html>
